--- a/teststyle.css
+++ b/teststyle.css
@@ -165,7 +165,7 @@ ul.thin li { margin:0px 0px; padding:0px; }
 #logo {
 	width: 677px;
 	height: 200px;
-	background: url('https://ptpimg.me/5c4wp3.png') no-repeat top;
+	background: url('https://ptpimg.me/agt4x9.png') no-repeat top;
 	margin: 0 auto;
 }
 
